...
        imageView.layer.masksToBounds = true
        imageView.layer.borderWidth = 8
        imageView.layer.borderColor = isCorrectAnswer ? UIColor.ypGreen.cgColor : UIColor.ypRed.cgColor
    }
    
    private enum Constants {
        static let roundFinished = "Раунд окончен!"
        static let resultText = "Ваш результат: "
        static let totalText = "Количество сыгранных квизов: "
        static let recordText = "Рекорд: "
        static let accuracyText = "Средняя точность: "
        static let playAgain = "Сыграть еще раз"
        static let totalQuestions = 10
...
